linear regression single variable final

--- a/linear-regression/linear-regression-single-variable/area-prices.ipynb
+++ b/linear-regression/linear-regression-single-variable/area-prices.ipynb
@@ -108,7 +108,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7d4766cc8ef0>"
+       "<matplotlib.collections.PathCollection at 0x75130dabe7b0>"
       ]
      },
      "execution_count": 3,
@@ -657,17 +657,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "21bad9f8-3b20-4c73-aa87-8500f3a664b3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7d4763924d40>]"
+       "[<matplotlib.lines.Line2D at 0x75130fb87200>]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "17a1e7fd-0daa-402e-8d72-b3a82b939ca4",
    "metadata": {},
    "outputs": [
@@ -754,7 +754,7 @@
        "4  7320"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "cba5f945-812a-4ada-b7af-b504fc2286e7",
    "metadata": {},
    "outputs": [
@@ -777,7 +777,7 @@
        "        8644000.,  3174000.,  3760000.])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "3990b771-3021-48e1-9fb6-4b61250a98a6",
    "metadata": {},
    "outputs": [],
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "559d5db0-0618-4e7b-ab6a-fd91d5e46bf8",
    "metadata": {},
    "outputs": [
@@ -891,7 +891,7 @@
        "8  1880   3760000.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "1747f7a9-b926-4a7e-9554-7c61dbdafbfa",
    "metadata": {},
    "outputs": [],
